PdfSelection: check m_document before accessing

The document is a property that the user needs to bind. If initializing
it has been neglected or delayed somehow, we shouldn't crash.

Fixes: QTBUG-106355
Change-Id: I8e99b4bb84d868b694886058d56166fb3c4eabff
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit c1dc52321cda894771bbbc38be92ae852281e26a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>